HelloUltraviolet/Source/Fixtures/RejectedSource/Coverage.uv
//! Coverage checks for rejected-source fixture metadata.

public procedure expectedRejectedSourceFixtureCount() -> usize {
    return 230usize
}

public procedure rejectedSourceFixtureCount() -> usize {
    return sourceTextRejectedSourceFixtureCount() +
        parsingRejectedSourceFixtureCount() +
        namesRejectedSourceFixtureCount() +
        proceduresRejectedSourceFixtureCount() +
        statementsRejectedSourceFixtureCount() +
        expressionsRejectedSourceFixtureCount() +
        patternsRejectedSourceFixtureCount() +
        ffiRejectedSourceFixtureCount() +
        keysRejectedSourceFixtureCount()
}

public procedure validatedRejectedSourceFixtureCount() -> usize {
    return validatedSourceTextRejectedSourceFixtureCount() +
        validatedParsingRejectedSourceFixtureCount() +
        validatedNamesRejectedSourceFixtureCount() +
        validatedProceduresRejectedSourceFixtureCount() +
        validatedStatementsRejectedSourceFixtureCount() +
        validatedExpressionsRejectedSourceFixtureCount() +
        validatedPatternsRejectedSourceFixtureCount() +
        validatedFFIRejectedSourceFixtureCount() +
        validatedKeysRejectedSourceFixtureCount()
}

public procedure rejectedSourceFixturesAreIndexed() -> bool {
    return rejectedSourceFixtureCount() == expectedRejectedSourceFixtureCount() &&
        validatedRejectedSourceFixtureCount() == expectedRejectedSourceFixtureCount()
}
